--- a/常用命令.md
+++ b/常用命令.md
@@ -9,3 +9,6 @@ cat /proc/devices         #显示当前设备
 cd /dev
 
 ls -ll          #现实设备并显示设备号等信息
+
+mknod [OPTION]... NAME TYPE [MAJOR MINOR]
+mknod /dev/hello c 236 0
